# tfcp

./: .editorconfig  .gitignore  BuildAndTest.md  CMakeLists.txt  README.md  TFCP.md  testme.bat  testme.sh  tfcp.docx
docs/: STRATEGY.md  TFCP.docx  TFCP.md
include/: twofold.h
include/tfcp/: defs.h  simd.h  simd_avx.h  simd_none.h  simd_sse.h  twofold.h
src/: CMakeLists.txt
src/include/tfcp/: basic.h  exact.h  simd.h
src/tfcp/: CMakeLists.txt  twofold.cpp
tests/: CMakeLists.txt
tests/include/tfcp/: test_utils.h
tests/unit/: CMakeLists.txt  test_basic_div.cpp  test_basic_ops.cpp  test_basic_sqrt.cpp  test_exact_ops.cpp  test_fma.cpp  test_simd_fma.cpp  test_simd_ops.cpp  test_simd_sqrt.cpp  test_twofold_alias.cpp  test_twofold_renorm.cpp
